      times without reloading the schema. (CNY-3380)
    * A bug related to Java files containing classes with no requirements
      is now fixed. (CNY-3379)
    * Unicode representations of flavors are now converted to ASCII
      strings before being parsed. (CNY-3381)
    * Fixed problem with the lookaside cache when a recipe defines a custom
      source action (CNY-3386)

  o Internal Changes:
    * Renamed isPayload file flag to isEncapsulatedContent
    * Added file flags to allow conary to override file contents and attributes
      for capsule-based files (such as from RPM).

Changes in 2.1.11:
  o New Features:
    * The recreatedb script is now capable of populating the Conary
      database with packages in the RPM database that are found in
      the Conary repositories in the installLabelPath. (CNY-3373)

  o Internal Changes:
    * Added ability to commit changesets without executing capsule
      implementations. This allows us to build a conarydb which reflects
      the current state of a system without reinstalling packages through
      the capsule handler.

  o Bug Fixes:
    * The Java package policies for computing provides and requires are
      now more efficient. (CNY-3372)

Changes in 2.1.10:
  o New Features:
    * The "conary migrate" command no longer requires interactive
      mode, and now defaults to yes rather than no. (CNY-3361)
    * Added --diff option to verify and showchangeset commands to display
      output as a git-formatted diff
    * Added --new-files option to verify to include files which were added
      to the system outside of conary package management. The
      verifyDirsNoNewFiles configuration option was added to pare down the
      tree conary looks through for new files.
    * Added exceptions and exceptDeps options to RPMRequires

  o Internal Changes
    * Optimized StreamCollection diff and __eq__ operations to use frozen
      data if available